--- a/Week_1/styles.css
+++ b/Week_1/styles.css
@@ -2,3 +2,14 @@
   padding: 0;
   margin: 0;
 }
+
+body {
+  padding: 1em;
+}
+
+.header-main {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 1em;
+}
