--- a/Week_1/styles.css
+++ b/Week_1/styles.css
@@ -14,6 +14,20 @@ body {
   margin-bottom: 5em;
 }
 
+h1::after {
+  content: "";
+  display: block;
+  width: 0%;
+  height: 3px;
+  background-color: #bee797;
+  border-radius: 10%;
+  transition: 0.15s ease-in-out;
+}
+
+h1:hover::after {
+  width: 100%;
+}
+
 .image-hero {
   display: flex;
   align-items: center;
@@ -29,6 +43,15 @@ body {
   width: clamp(23ch, 30%, 46ch);
   text-align: justify;
   margin-right: 2em;
+}
+
+em {
+  text-decoration: underline 0.1em rgba(0, 0, 0, 0.3);
+  transition: text-decoration-color 250ms;
+}
+
+em:hover {
+  text-decoration-color: rgba(0, 0, 0, 1);
 }
 
 .image-hero img {
@@ -66,4 +89,12 @@ th {
 
 table td:hover {
   background-color: #bee797;
+}
+
+form {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
