--- a/Week_1/styles.css
+++ b/Week_1/styles.css
@@ -64,7 +64,8 @@ em:hover {
 }
 
 .form-wrapper h2,
-.table-wrapper h2 {
+.table-wrapper h2,
+#date-wrapper h2 {
   padding-bottom: 1em;
 }
 
@@ -97,4 +98,27 @@ form {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+#date-button {
+  margin-left: 0.5em;
+  margin-bottom: 0.75em;
+  background-color: rgba(51, 51, 51, 0.05);
+  border-radius: 8px;
+  border-width: 0;
+  color: #333333;
+  padding: 0.5em 0.75em;
+  cursor: pointer;
+}
+
+#date-button:hover {
+  background-color: rgba(22, 22, 22, 0.1);
+}
+
+#date-text {
+  padding: 0.5em;
+  outline: 1px solid;
+  outline-color: rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  height: 1em;
 }
